# Causal-Oracle

./: .gitignore  CONTEXT.md  README.md  SPEC.md  pyproject.toml  requirements.txt  start.sh
backend/: .env.railway  Dockerfile  config.py  main.py  modal_inference.py  patch_timesfm.py  requirements-railway.txt
backend/api/: routes.py  websocket.py
backend/models/: schemas.py
backend/pipeline/: orchestrator.py  stage_01_ingest.py  stage_02_features.py  stage_03_lagmatrix.py  stage_04_causal.py  stage_05_validate.py  stage_06_regime.py  stage_07_forecast.py  stage_08_backtest.py
backend/storage/: artifacts.py  db.py
backend/utils/: logging.py  serialization.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css
frontend/src/components/: BacktestResults.jsx  CausalGraph.jsx  Dashboard.jsx  ForecastChart.jsx  Guide.jsx  PipelineControl.jsx  PipelineStatus.jsx  RefutationTable.jsx  RegimeTimeline.jsx  RunsPage.jsx  SuggestedPairings.jsx  TickerSearch.jsx
frontend/src/hooks/: useApi.js  useWebSocket.js
frontend/src/store/: pipelineStore.js
frontend/src/utils/: formatting.js
